[package]
name = "vorbis"
version = "0.0.8"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "High-level bindings for the official libvorbis library."
repository = "https://github.com/tomaka/vorbis-rs"
license = "Apache-2.0"

[dependencies]
libc = "*"
ogg-sys = "*"
vorbis-sys = "*"
vorbisfile-sys = "*"
