[package]
name = "vorbis"
version = "0.1.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "High-level bindings for the official libvorbis library."
repository = "https://github.com/tomaka/vorbis-rs"
license = "Apache-2.0"
edition = "2018"

[dependencies]
libc = "0.2"
ogg-sys = "0.0.9"
vorbis-sys = "0.1.0"
vorbisfile-sys = "0.0.8"

[dependencies.vorbis-encoder]
# Version with recent vorbis-sys is not on crates.io
git = "https://github.com/Hossein-Noroozpour/vorbis-encoder-rs"
optional = true

[dev-dependencies]
rand = "0.7"

[features]
default = ["encoder"]
encoder = ["vorbis-encoder"]

[[example]]
name = "decode-encode"
required-features = ["encoder"]
